--- a/app/src/main/resources/log4j2.properties
+++ b/app/src/main/resources/log4j2.properties
@@ -14,7 +14,7 @@ appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
 loggers = file
-logger.file.name = com.github.mauriceliddy
+logger.file.name = com.github.mauriceliddy.Project0
 logger.file.level = trace
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
